--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         <div class="contact-home-content">
             <p>FEEDBACK AND SUGESTION</p>
             <h1>CONTACT US</h1>
-            <a href="./contact.html"><img src="./images/arrow-white.png" /></a>
+            <a href="/contact"><img src="./images/arrow-white.png" /></a>
         </div>
         <img class="contact-home-img" src="./images/contact.jpg" />
     </div>
@@ -155,7 +155,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="./news.html"><button class="news-redirect">SEE ALL</button></a>
+            <a href="/news"><button class="news-redirect">SEE ALL</button></a>
         </div>
 
     </div>
