--- a/public/news-child.html
+++ b/public/news-child.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Vroom</title>
-    <link rel="icon" type="image/x-icon" href="./asset/Logo.ico">
+    <link rel="icon" type="image/x-icon" href="/images/Logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -16,10 +16,11 @@
 <body>
     <div class="nav-wrapper">
         <div class="nav-container">
-            <a href="/"><img src="./images/logo.png" width="40" /></a>
+            <a href="/"><img src="/images/logo.png" width="40" /></a>
             <a href="/model">model</a>
             <a href="/news">news</a>
             <a href="/contact">contact</a>
+            <a id="button-logout">logout</a>
         </div>
     </div>
     
@@ -30,10 +31,10 @@
     <div class="footer">
         <div class="footer-container">
             <p>&copy; Copyright 2024 Vroom</p>
-            <img src="./asset/logo.png" width="50" />
+            <img src="/images/logo.png" width="50" />
         </div>
     </div>
-    <script type="module" src="news-child.js"></script>
+    <script type="module" src="/news-child.js"></script>
 </body>
 
 </html>
