--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
             <div class="nav-menu">
                 <a href="/model">Model</a>
                 <a href="/news">News</a>
-                <a href="/contact">Contact</a>
-                
+                <a href="">Profile</a>
                 <a id="button-logout"><button>Logout</button></a>
             </div>
         </div>
@@ -48,7 +47,7 @@
         
     </div>
 
-    <div class="brand-wrapper">
+    <div id="brand-wrapper" class="brand-wrapper">
         <h1 style="text-align: center; font-size: 84px; margin-top: 100px;">TOP BRANDS</h1>
 
         <div class="brand-container">
@@ -104,9 +103,31 @@
     </div>
 
     <div class="footer">
-        <div class="footer-container">
-            <p>&copy; Copyright 2024 Vroom</p>
+        <div class="footer-logo">
             <img src="./images/logo.png" width="50" />
+            <p>&copy; Copyright 2024 Auto Boost</p>
+        </div>
+        <div class="footer-content">
+            <div class="footer-content-1">
+                <a href="/" style="font-weight: 800;">Home</a>
+                <a href="/#slide-wrapper">Top Models</a>
+                <a href="/#brand-wrapper">Top Brands</a>
+                <a href="/#news-wrapper">Top News</a>
+            </div>
+
+            <div class="footer-content-2">
+                <a href="/model" style="font-weight: 800;">Models</a>
+                <a href="/model">Models Lists</a>
+                <a href="/news" style="font-weight: 800;">News</a>
+                <a href="/news">News Lists</a>
+            </div>
+
+            <div class="footer-content-3">
+                <a style="font-weight: 800;">Profile (blom bikin)</a>
+                <a>Account</a>
+                <a>Transactions</a>
+                <a>Contact</a>
+            </div>
         </div>
     </div>
     <script type="module" src="../index.js"></script>
