--- a/public/checkout.html
+++ b/public/checkout.html
@@ -35,7 +35,7 @@
     <div class="checkout-wrapper">
         <div class="checkout-input-container">
             <h1>Delivery Address</h1>
-            <form class="checkout-form">
+            <form id="checkout-form" class="checkout-form">
                 <label>Email</label>
                 <input type="email" id="checkout-email" placeholder="Email" required />
                 <label>First Name</label>
