--- a/public/model.html
+++ b/public/model.html
@@ -40,7 +40,15 @@
                         <h4 class="model-brand">Lamborghini</h4>
                         <h1 class="model-name">REVUELTO</h1>
                     </div>
-                    <button id="x" class="model-button">More Info</button>
+                    <div class="model-items-right">
+                        <button id="x" class="model-button">More Info</button>
+                        
+                        <div class="like-container">
+                            <img src="/images/like.png" id="like-image" />
+                            <p id="like-count"></p>
+                        </div>
+                    </div>
+                    
                 </div>
 
                 <div class="model-items-sub">
