--- a/public/profile-data.html
+++ b/public/profile-data.html
@@ -40,7 +40,9 @@
         </div>
 
         <div class="profile-wrapper-right">
-        
+            <div id="profile-data-wrapper">
+
+            </div>
         </div>
     </div>
 
