user end selesai

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
         <div class="contact-home-content">
             <p>FEEDBACK AND SUGESTION</p>
             <h1>CONTACT US</h1>
-            <a href="/contact"><img src="./images/arrow-white.png" /></a>
+            <a href="/profile-contact"><img src="./images/arrow-white.png" /></a>
         </div>
         <img class="contact-home-img" src="./images/contact.jpg" />
     </div>
@@ -103,7 +103,7 @@
 
     <div class="footer">
         <div class="footer-logo">
-            <img src="./images/logo.png" width="50" />
+            <img src="/images/logo.png" width="50" />
             <p>&copy; Copyright 2024 Auto Boost</p>
         </div>
         <div class="footer-content">
@@ -122,10 +122,10 @@
             </div>
 
             <div class="footer-content-3">
-                <a style="font-weight: 800;">Profile (blom bikin)</a>
-                <a>Account</a>
-                <a>Transactions</a>
-                <a>Contact</a>
+                <a href="/profile-data" style="font-weight: 800;">Profile</a>
+                <a href="/profile-transaction">Transactions</a>
+                <a href="/profile-account">Account</a>
+                <a href="/profile-contact">Contact</a>
             </div>
         </div>
     </div>
