--- a/public/model.html
+++ b/public/model.html
@@ -28,7 +28,7 @@
                     <div class="nav-menu" style="flex: 1;">
                         <a href="/model">Model</a>
                         <a href="/news">News</a>
-                        <a href="">Profile</a>
+                        <a href="/profile-data">Profile</a>
                     </div>
                 </div>
             </div>
@@ -58,11 +58,13 @@
                     </div>
                     <div style="display: flex; gap: 20px; align-items: center;">
                         <p>Max Speed</p>
-                        <h4 class="model-speed">350km/h</h4>
+                        <h4 class="model-speed">350</h4>
+                        <p>km/h</p>
                     </div>
                     <div style="display: flex; gap: 20px; align-items: center;">
                         <p>Power</p>
-                        <h4 class="model-power">1015 CV</h4>
+                        <h4 class="model-power">1015</h4>
+                        <p>cv</p>
                     </div>
                 </div>
             </div>
