--- a/public/news-child.html
+++ b/public/news-child.html
@@ -25,7 +25,7 @@
             <div class="nav-menu">
                 <a href="/model">Model</a>
                 <a href="/news">News</a>
-                <a href="">Profile</a>
+                <a href="/profile-data">Profile</a>
                 <a id="button-logout"><button>Logout</button></a>
             </div>
         </div>
@@ -56,10 +56,10 @@
             </div>
     
             <div class="footer-content-3">
-                <a style="font-weight: 800;">Profile (blom bikin)</a>
-                <a>Account</a>
-                <a>Transactions</a>
-                <a>Contact</a>
+                <a href="/profile-data" style="font-weight: 800;">Profile</a>
+                <a href="/profile-transaction">Transactions</a>
+                <a href="/profile-account">Account</a>
+                <a href="/profile-contact">Contact</a>
             </div>
         </div>
     </div>
