--- a/public/profile-transaction.html
+++ b/public/profile-transaction.html
@@ -40,7 +40,9 @@
         </div>
 
         <div class="profile-wrapper-right">
+            <div id="profile-transaction-wrapper">
 
+            </div>
         </div>
     </div>
 
