--- a/public/news.html
+++ b/public/news.html
@@ -24,7 +24,7 @@
             <div class="nav-menu">
                 <a href="/model">Model</a>
                 <a href="/news">News</a>
-                <a href="">Profile</a>
+                <a href="/profile-data">Profile</a>
                 <a id="button-logout"><button>Logout</button></a>
             </div>
         </div>
@@ -37,7 +37,7 @@
 
     <div class="footer">
         <div class="footer-logo">
-            <img src="./images/logo.png" width="50" />
+            <img src="/images/logo.png" width="50" />
             <p>&copy; Copyright 2024 Auto Boost</p>
         </div>
         <div class="footer-content">
@@ -56,10 +56,10 @@
             </div>
     
             <div class="footer-content-3">
-                <a style="font-weight: 800;">Profile (blom bikin)</a>
-                <a>Account</a>
-                <a>Transactions</a>
-                <a>Contact</a>
+                <a href="/profile-data" style="font-weight: 800;">Profile</a>
+                <a href="/profile-transaction">Transactions</a>
+                <a href="/profile-account">Account</a>
+                <a href="/profile-contact">Contact</a>
             </div>
         </div>
     </div>
