--- a/public/profile-contact.html
+++ b/public/profile-contact.html
@@ -40,7 +40,34 @@
         </div>
 
         <div class="profile-wrapper-right">
-
+            <div class="contact-wrapper">
+                <div class="contact-text">
+                    <h1>Contact us</h1>
+                    <p>We value your feedback and suggestions as they help us improve and provide a better experience for all
+                        our users. If you
+                        have any ideas, comments, or suggestions, please don't hesitate to share them with us.</p>
+                </div>
+            
+                <div class="contact-form">
+                    <form>
+                        <div style="display: flex; gap: 20px;">
+                            <div style="flex: 1;">
+                                <label for="fname">First Name</label>
+                                <input id="fname" name="fname" type="text" style="width: 100%;" />
+                            </div>
+                            <div style="flex: 1;">
+                                <label for="lname">Last Name</label>
+                                <input id="lname" name="lname" type="text" style="width: 100%;" />
+                            </div>
+                        </div>
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="email" />
+                        <label for="suggestion">What can we do for you</label>
+                        <textarea name="suggestion" id="suggestion" rows="6"></textarea>
+                        <input type="submit" class="contact-button" style="background-color: black;" />
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
