--- a/public/admin-main.html
+++ b/public/admin-main.html
@@ -39,9 +39,13 @@
             <a id="profile-contact" href="/profile-contact">Contact Us</a>
             <a id="profile-admin" href="/admin-main">Manage</a>
         </div>
-    </div>
 
-    admin main
+        <div class="profile-wrapper-right">
+            <div id="admin-wrapper">
+                
+            </div>
+        </div>
+    </div>
     <script type="module" src="/admin-main.js"></script>
 </body>
 
