--- a/public/admin-main.html
+++ b/public/admin-main.html
@@ -41,8 +41,11 @@
         </div>
 
         <div class="profile-wrapper-right">
-            <div id="admin-wrapper">
-                
+            <div id="admin-wrapper" class="admin-wrapper">
+                <div id="pop-wrapper">
+
+                </div>
+                <!-- js content -->
             </div>
         </div>
     </div>
