--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,11 @@
                 <a href="/"><img src="./images/logo.png" width="40" /><h2>Auto Boost</h2></a>
             </div>
             <div class="nav-menu">
+                <a href="/">Home</a>
                 <a href="/model">Model</a>
                 <a href="/news">News</a>
                 <a href="/profile-data">Dashboard</a>
-                <a id="button-logout"><button>Logout</button></a>
+                <a id="button-login"><button>Login</button></a>
             </div>
         </div>
     </div>
