--- a/public/model-child.html
+++ b/public/model-child.html
@@ -24,10 +24,10 @@
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="/model">Model</a>
+                <a href="/">Home</a>
+                <a href="/model">Product</a>
                 <a href="/news">News</a>
-                <a href="/profile-data">Profile</a>
-                <a id="button-logout"><button>Logout</button></a>
+                <a href="/profile-data">Dashboard</a>
             </div>
         </div>
     </div>
@@ -37,30 +37,21 @@
     </div>
 
     <div class="footer">
-        <div class="footer-logo">
-            <img src="/images/logo.png" width="50" />
-            <p>&copy; Copyright 2024 Auto Boost</p>
-        </div>
         <div class="footer-content">
             <div class="footer-content-1">
-                <a href="/" style="font-weight: 800;">Home</a>
-                <a href="/#slide-wrapper">Top Models</a>
-                <a href="/#brand-wrapper">Top Brands</a>
-                <a href="/#news-wrapper">Top News</a>
+                <img src="/images/logo.png" width="50" />
+                <h2>Auto Boost</h2>
             </div>
-    
+
             <div class="footer-content-2">
-                <a href="/model" style="font-weight: 800;">Models</a>
-                <a href="/model">Models Lists</a>
-                <a href="/news" style="font-weight: 800;">News</a>
-                <a href="/news">News Lists</a>
+                <a href="/">Home</a>
+                <a href="/model">Product</a>
+                <a href="/news">News</a>
+                <a href="/profile-data">Dashboard</a>
             </div>
-    
+
             <div class="footer-content-3">
-                <a href="/profile-data" style="font-weight: 800;">Profile</a>
-                <a href="/profile-transaction">Transactions</a>
-                <a href="/profile-account">Account</a>
-                <a href="/profile-contact">Contact</a>
+                <p>&copy; Copyright 2024 Auto Boost</p>
             </div>
         </div>
     </div>
