--- a/public/model.html
+++ b/public/model.html
@@ -26,9 +26,9 @@
                         </a>
                     </div>
                     <div class="nav-menu" style="flex: 1;">
-                        <a href="/model">Model</a>
+                        <a href="/">Home</a>
                         <a href="/news">News</a>
-                        <a href="/profile-data">Profile</a>
+                        <a href="/profile-data">Dashboard</a>
                     </div>
                 </div>
             </div>
