--- a/public/profile-contact.html
+++ b/public/profile-contact.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./styles/profile.css">
 </head>
 
 <body>
@@ -23,10 +23,10 @@
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="/model">Model</a>
+                <a href="/">Home</a>
+                <a href="/model">Product</a>
                 <a href="/news">News</a>
-                <a href="/profile-data">Profile</a>
-                <a id="button-logout"><button>Logout</button></a>
+                <a href="/profile-data">Dashboard</a>
             </div>
         </div>
     </div>
@@ -38,6 +38,7 @@
             <a id="profile-account" href="/profile-account">Account</a>
             <a id="profile-contact" href="/profile-contact">Contact Us</a>
             <a id="profile-admin" href="/admin-main">Manage</a>
+            <a id="button-logout"><button>Logout</button></a>
         </div>
 
         <div class="profile-wrapper-right">
